feat: adjust info

--- a/style.css
+++ b/style.css
@@ -16,3 +16,34 @@
     align-items: center;
     flex-direction: column;
   }
+  .container-footer {
+    padding: 20px;
+    background-color: rgb(7, 170, 118);
+    display: flex;
+    justify-content: space-around;
+    flex-direction: row;
+    align-items: center;
+    margin: 10px;
+  }
+  .container-header {
+    padding: 30px;
+    background-color: rgb(7, 170, 118);
+    display: flexbox;
+    justify-content: center;
+    flex-direction: row;
+    align-items: stretch;
+    margin: 10px;
+  }
+  .list {
+    font-size: 20px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+  }
+  #ava {
+    border: 3px solid rgb(7, 170, 118);
+    border-radius: 8px;
+  }
+  .line {
+    font-size: 22px;
+  }  
